# YourDailies

./: CMakeLists.txt  database.cpp  database.h  designer.cpp  designer.h  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registration.ui  resources.qrc  userHandling.cpp  userHandling.h
app/: AppContext.cpp  appcontext.h  usersession.h
repository/: database.cpp  database.h
services/: dashboardservice.h  userservice.cpp  userservice.h  widgetservice.h
ui/: designer.cpp  mainwindow.cpp
utils/: logger.h
